# php-perfidious

./: .clang-format  .dockerignore  .editorconfig  .gitattributes  .gitignore  .phpcs.xml.dist  CHANGELOG.md  CMakeLists.txt  Makefile.gperf.frag  README.md  build-gperf.php  codecov.yml  composer.json  config.m4  derivation.nix  flake.nix  package.xml  perf.stub.php  perfidious.stub.php  php_perf.h  php_perfidious.h  phpstan.neon.dist
.github/: php-debian.Dockerfile  php-fedora.Dockerfile
.github/scripts/: docker.sh
.github/workflows/: ci.yml
examples/: all-events.php  estimate-overhead.php  memory.php  sieve.php  sieve2.php  three-sw-clock.php  watch.php
nix/: derivation.nix  iwyu.nix
src/: exceptions.c  extension.c  functions.c  functions.h  handle.c  handle.h  pmu_enum.c  pmu_event_info.c  pmu_ht.gperf  pmu_info.c  private.h  read_result.c
tests/: basic.phpt  disabled.phpt  get-pmu-event-info.phpt  get-pmu-info.phpt  info-both.phpt  info-global-closed.phpt  info-global-invalid.phpt  info-global.phpt  info-request-closed.phpt  info-request-invalid.phpt  info-request.phpt  info.phpt  list-pmu-events-unknown-pmu.phpt  list-pmu-events.phpt  list-pmus.phpt  open.phpt  pmu_enum.phpt  version.phpt
tests/global-handle/: disabled.phpt  enabled.phpt  stays-open.phpt
tests/handle/: debug-corrupt-metric-ids.phpt  dirty-2.phpt  dirty-3.phpt  dirty-4.phpt  dirty.phpt  disable.phpt  enable.phpt  invalid-event-name-2.phpt  invalid-event-name.phpt  non-zero-after-enable.phpt  open-fails-invalid-cpu.phpt  open-fails-invalid-pid.phpt  open-fails-missing-cap-debug.phpt  (+8 more)
(+8 files in other folders)
